Add your commit

--- a/styles/style.css
+++ b/styles/style.css
@@ -190,7 +190,7 @@ line-height: normal;
 m
 }
 .G{
-    color: #070211;
+    color:  #F00;
 font-family: Merriweather;
 font-size: 48px;
 font-style: normal;
